# PrimeDep

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  Notes.txt  main.cpp
cmake/: vendors.cmake
include/PrimeDep/: AssetId.hpp  FourCC.hpp  IResource.hpp  IResourceSource.hpp  ObjectTag.hpp  ResourceDescriptor.hpp  ResourceFactory.hpp  ResourceNameDatabase.hpp  ResourceUtils.hpp  Utils.hpp
include/PrimeDep/Math/: AABox.hpp  Transform4f.hpp  Vector3f.hpp
include/PrimeDep/Particles/: ParticleData.hpp
include/PrimeDep/Resources/: AiFiniteStateMachine.hpp  AnimPOIData.hpp  AnimSource.hpp  AssetId.hpp  AudioGroup.hpp  AudioTranslationTable.hpp  CharLayoutInfo.hpp  CollidableOBBTreeGroup.hpp  CollisionResponseData.hpp  DecalData.hpp  GuiFrame.hpp  IResource.hpp  MapWorld.hpp  MetroidWorld.hpp  Model.hpp  PakFile.hpp  Particle.hpp  ParticleElectric.hpp  ParticleSwoosh.hpp  PathFindArea.hpp  ProjectileWeapon.hpp  RasterFont.hpp  ResourceFactory.hpp  ScannableObjectInfo.hpp  SkinRules.hpp  SoundGroupData.hpp  StringTable.hpp  Texture.hpp
lib/: CMakeLists.txt
lib/include/: converter.h
lib/include/PrimeDep/: AssetId.hpp  CRC32.hpp  FourCC.hpp  IResource.hpp  IResourceSource.hpp  ModelSkinPool.hpp  NamedResource.hpp  ObjectTag.hpp  ResourceDescriptor.hpp  ResourceFactory.hpp  ResourceNameDatabase.hpp  ResourcePool.hpp  ResourceUtils.hpp  Utils.hpp  texture_decode.hpp
lib/include/PrimeDep/Animation/: BoolPOINode.hpp  CharAnimTime.hpp  CharacterInfo.hpp  CharacterSet.hpp  Int32POINode.hpp  PASDatabase.hpp  POINode.hpp  ParticlePOINode.hpp  SoundPOINode.hpp
lib/include/PrimeDep/Graphics/: GXTypes.hpp
lib/include/PrimeDep/Math/: AABox.hpp  Color.hpp  Transform4f.hpp  Vector2i.hpp  Vector3f.hpp
lib/include/PrimeDep/Particles/: ColorElement.hpp  EmitterElement.hpp  IElement.hpp  IntElement.hpp  KeyframeEmitterData.hpp  ModVectorElement.hpp  ParticleData.hpp  ParticleDataFactory.hpp  ParticleProperty.hpp  RealElement.hpp  SpawnSystemKeyframeData.hpp  UVElement.hpp  VectorElement.hpp
lib/include/PrimeDep/Resources/MetroidPrime/: AiFiniteStateMachine.hpp  AnimCharacterSet.hpp  AnimPOIData.hpp  AnimSource.hpp  AudioGroup.hpp  AudioTranslationTable.hpp  CharLayoutInfo.hpp  CollidableOBBTreeGroup.hpp  CollisionResponseData.hpp  DecalData.hpp  DependencyGroup.hpp  GuiFrame.hpp  Hints.hpp  MapArea.hpp  MapUniverse.hpp  MapWorld.hpp  MetroidArea.hpp  MetroidWorld.hpp  MidiData.hpp  Model.hpp  PakFile.hpp  Particle.hpp  ParticleElectric.hpp  ParticleSwoosh.hpp  PathFindArea.hpp  ProjectileWeapon.hpp  RasterFont.hpp  SaveWorld.hpp  ScannableObjectInfo.hpp  SkinRules.hpp  SkinnedModel.hpp  SoundGroupData.hpp  StringTable.hpp  Texture.hpp  Tweak.hpp
lib/include/PrimeDep/WorldCommon/MetroidPrime/: EditorId.hpp  MappableObject.hpp
lib/src/: converter.c
lib/src/PrimeDep/: AssetId.cpp  CRC32.cpp  ObjectTag.cpp  ResourceNameDatabase.cpp  ResourcePool.cpp  texture_decode.cpp
lib/src/PrimeDep/Animation/: BoolPOINode.cpp  CharAnimTime.cpp  Int32POINode.cpp  POINode.cpp  ParticlePOINode.cpp  SoundPOINode.cpp
lib/src/PrimeDep/Math/: AABox.cpp  Color.cpp  Transform4f.cpp  Vector2i.cpp  Vector3f.cpp
lib/src/PrimeDep/Particles/: ColorElement.cpp  EmitterElement.cpp  IElement.cpp  IntElement.cpp  ModVectorElement.cpp  ParticleData.cpp  ParticleDataFactory.cpp  ParticleProperty.cpp  RealElement.cpp  SpawnSystemKeyframeData.cpp  UVElement.cpp  VectorElement.cpp
lib/src/PrimeDep/Resources/MetroidPrime/: AiFiniteStateMachine.cpp  AnimCharacterSet.cpp  AnimPOINodeData.cpp  AnimSource.cpp  AudioGroup.cpp  AudioTranslationTable.cpp  CharLayoutInfo.cpp  CollidableOBBTreeGroup.cpp  CollisionResponseData.cpp  DecalData.cpp  DependencyGroup.cpp  GuiFrame.cpp  Hints.cpp  MapArea.cpp  MapUniverse.cpp  MapWorld.cpp  MetroidArea.cpp  MetroidWorld.cpp  MidiData.cpp  Model.cpp  PakFile.cpp  Particle.cpp  ParticleElectric.cpp  ParticleSwoosh.cpp  PathFindArea.cpp  ProjectileWeapon.cpp  RasterFont.cpp  SaveWorld.cpp  ScannableObjectInfo.cpp  SkinRules.cpp  SoundGroupData.cpp  StringTable.cpp  Texture.cpp  Tweak.cpp
lib/src/PrimeDep/WorldCommon/MetroidPrime/: MappableObject.cpp
packer/: CMakeLists.txt
packer/include/: PackagePrime.hpp
packer/src/: PackagePrime.cpp  main.cpp
resources/: ResourceDB.json
src/PrimeDep/: ResourceNameDatabase.cpp  ResourcePool.cpp
src/PrimeDep/Animation/: BoolPOINode.cpp  CharAnimTime.cpp  POINode.cpp  ParticlePOINode.cpp
src/PrimeDep/Math/: Transform4f.cpp  Vector3f.cpp
src/PrimeDep/Particles/: ParticleData.cpp
src/PrimeDep/Resources/: AiFiniteStateMachine.cpp  AnimPOINodeData.cpp  AnimSource.cpp  AudioGroup.cpp  AudioTranslationTable.cpp  CharLayoutInfo.cpp  CollidableOBBTreeGroup.cpp  CollisionResponseData.cpp  DecalData.cpp  GuiFrame.cpp  MapWorld.cpp  MetroidWorld.cpp  Model.cpp  PakFile.cpp  Particle.cpp  ParticleElectric.cpp  ParticleSwoosh.cpp  PathFindArea.cpp  ProjectileWeapon.cpp  RasterFont.cpp  ScannableObjectInfo.cpp  SkinRules.cpp  StringTable.cpp  Texture.cpp
uncooker/: CMakeLists.txt
uncooker/src/: main.cpp
